--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.1.5",
     "@hookform/resolvers": "^2.0.1",
     "apexcharts": "^3.26.0",
+    "axios": "^0.21.1",
+    "faker": "^5.5.3",
     "framer-motion": "^4.1.2",
     "next": "10.1.3",
     "react": "17.0.2",
@@ -21,11 +23,14 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.0.4",
     "react-icons": "^4.2.0",
+    "react-query": "^3.13.6",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.1",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "miragejs": "^0.1.41",
     "typescript": "^4.2.3"
   }
 }
